@@ -1,5 +1,6 @@
 package com.eazybytes.config;
 
+import com.eazybytes.model.Authority;
 import com.eazybytes.model.Customer;
 import com.eazybytes.repository.CustomerRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,6 +16,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 
 @Component
 public class EazyBankUsernamePwdAuthenticationProvider implements AuthenticationProvider {
@@ -30,17 +32,38 @@ public class EazyBankUsernamePwdAuthenticationProvider implements Authentication
         String username = authentication.getName();
         String pwd = authentication.getCredentials().toString();
         List<Customer> customer = customerRepository.findByEmail(username);
-        if (customer.size() > 0) {
+        if (!customer.isEmpty()) {
             if (passwordEncoder.matches(pwd, customer.get(0).getPwd())) {
-                List<GrantedAuthority> authorities = new ArrayList<>();
-                authorities.add(new SimpleGrantedAuthority(customer.get(0).getRole()));// SimpleGrantedAuthority는 특정 endUser에게 권한, 역할을 부여하는 final class
-                return new UsernamePasswordAuthenticationToken(username, pwd, authorities);
+//                List<GrantedAuthority> authorities = new ArrayList<>();
+//                authorities.add(new SimpleGrantedAuthority(customer.getFirst().getRole()));// SimpleGrantedAuthority는 특정 endUser에게 권한, 역할을 부여하는 final class
+                return new UsernamePasswordAuthenticationToken(username, pwd, getGrantedAuthorities(customer.getFirst().getAuthorities()));
             } else {
                 throw new BadCredentialsException("Invalid password!");
             }
-        }else {
+        } else {
             throw new BadCredentialsException("No user registered with this details!");
         }
+    }
+
+    /**
+     * 주어진 Authority 객체들의 집합을 받아서,
+     * 그에 상응하는 GrantedAuthority 객체들의 리스트를 반환하는 메서드.
+     *
+     * @param authorities 변환할 Authority 객체들의 집합 (Set)
+     * @return GrantedAuthority 객체들의 리스트 (List)
+     */
+    private List<GrantedAuthority> getGrantedAuthorities(Set<Authority> authorities) {
+        // GrantedAuthority 객체들을 담을 리스트를 새로 생성.
+        List<GrantedAuthority> grantedAuthorities = new ArrayList<>();
+
+        // 주어진 Authority 집합을 반복하면서 각각의 Authority 객체를 처리.
+        for (Authority authority : authorities) {
+            // 각 Authority 객체의 이름을 가져와서 SimpleGrantedAuthority 객체를 생성하고 리스트에 추가.
+            grantedAuthorities.add(new SimpleGrantedAuthority(authority.getName()));
+        }
+
+        // 완성된 GrantedAuthority 객체들의 리스트를 반환.
+        return grantedAuthorities;
     }
 
     @Override
